k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network-sec
  labels:
    name: network-sec
